added game logistics